✏️ Apply the new design at the release system of this project.

--- a/.github/workflows/release-validate.yml
+++ b/.github/workflows/release-validate.yml
@@ -36,27 +36,33 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  # Parse project configuration from intent.yaml
+  config:
+    name: Parse Configuration
+    uses: Chisanan232/Template-Python-UV-Project/.github/workflows/rw_parse_project_config.yaml@master
+
   intent-parse:
     uses: Chisanan232/Template-Python-UV-Project/.github/workflows/rw_parse_release_intent.yaml@master
+    needs: config
     with:
-      level: ${{ inputs.level || 'auto' }}
-      python: 'auto'
-      docker: 'auto'
-      docs: 'auto'
+      level: ${{ inputs.level || needs.config.outputs.level }}
+      python: ${{ needs.config.outputs.python }}
+      docker: ${{ needs.config.outputs.docker }}
+      docs: ${{ needs.config.outputs.docs }}
       notes: 'Validation test run'
 
   build_git-tag_and_create_github-release:
     uses: Chisanan232/Template-Python-UV-Project/.github/workflows/rw_build_git-tag_and_create_github-release_v2.yaml@master
-    needs: intent-parse
+    needs: [config, intent-parse]
     with:
-      version: "1.0.0-validation"  # Test version for validation
+      version: ${{ needs.config.outputs.validation_version }}  # Test version for validation
       debug_mode: true
     secrets:
       github_auth_token: ${{ secrets.GITHUB_TOKEN }}
 
   python-build-check:
     uses: ./.github/workflows/rw_python_package.yaml
-    needs: build_git-tag_and_create_github-release
+    needs: [config, build_git-tag_and_create_github-release]
     with:
       operation: 'test'
       artifact-name: 'validation-python-package'
@@ -64,32 +70,36 @@ jobs:
   docker-build-dockerhub:
     name: Validate DockerHub Build
     uses: Chisanan232/Template-Python-UV-Project/.github/workflows/rw_docker_operations.yaml@master
-    needs: build_git-tag_and_create_github-release
+    needs: [config, build_git-tag_and_create_github-release]
     with:
       operation: 'test'
-      registry: 'docker.io'
+      registry: ${{ needs.config.outputs.docker_registry_dockerhub }}
       image-name: ${{ github.repository }}
-      version: 'validation-test'
-      health-check-port: '8000'
-      health-check-path: '/health'
+      version: ${{ needs.config.outputs.validation_test_version }}
+      health-check-port: ${{ needs.config.outputs.docker_health_check_port }}
+      health-check-path: ${{ needs.config.outputs.docker_health_check_path }}
       enable-signing: true
+      app-env-var-name: ${{ needs.config.outputs.docker_app_env_var_name }}
+      app-env-var-value: ${{ needs.config.outputs.docker_app_env_var_value }}
 
   docker-build-ghcr:
     name: Validate GHCR Build
     uses: Chisanan232/Template-Python-UV-Project/.github/workflows/rw_docker_operations.yaml@master
-    needs: build_git-tag_and_create_github-release
+    needs: [config, build_git-tag_and_create_github-release]
     with:
       operation: 'test'
-      registry: 'ghcr.io'
+      registry: ${{ needs.config.outputs.docker_registry_ghcr }}
       image-name: ${{ github.repository }}
-      version: 'validation-test'
-      health-check-port: '8000'
-      health-check-path: '/health'
+      version: ${{ needs.config.outputs.validation_test_version }}
+      health-check-port: ${{ needs.config.outputs.docker_health_check_port }}
+      health-check-path: ${{ needs.config.outputs.docker_health_check_path }}
       enable-signing: true
+      app-env-var-name: ${{ needs.config.outputs.docker_app_env_var_name }}
+      app-env-var-value: ${{ needs.config.outputs.docker_app_env_var_value }}
 
   docs-build:
     uses: Chisanan232/Template-Python-UV-Project/.github/workflows/rw_docs_operations.yaml@master
-    needs: intent-parse
+    needs: [config, intent-parse]
     with:
       operation: 'test'
       upload-artifacts: true
@@ -97,19 +107,21 @@ jobs:
   supply-chain-loopback:
     name: Security Scan (Supply Chain)
     uses: Chisanan232/Template-Python-UV-Project/.github/workflows/rw_docker_operations.yaml@master
-    needs: [docker-build-dockerhub, docker-build-ghcr]
+    needs: [config, docker-build-dockerhub, docker-build-ghcr]
     with:
       operation: 'security-scan'
-      registry: 'docker.io'  # Use DockerHub build for security scan
+      registry: ${{ needs.config.outputs.docker_registry_dockerhub }}  # Use DockerHub build for security scan
       image-name: ${{ github.repository }}
-      version: 'validation-test'
+      version: ${{ needs.config.outputs.validation_test_version }}
       enable-sbom: true
       enable-signing: true
+      app-env-var-name: ${{ needs.config.outputs.docker_app_env_var_name }}
+      app-env-var-value: ${{ needs.config.outputs.docker_app_env_var_value }}
 
   validation-summary:
     name: Validation Summary
     runs-on: ubuntu-latest
-    needs: [intent-parse, python-build-check, docker-build-dockerhub, docker-build-ghcr, docs-build, supply-chain-loopback]
+    needs: [config, intent-parse, python-build-check, docker-build-dockerhub, docker-build-ghcr, docs-build, supply-chain-loopback]
     if: always()
     steps:
       - name: Check validation results
