➕ Add the new property about PyPI authentication in release intent config.

--- a/.github/tag_and_release/intent.yaml
+++ b/.github/tag_and_release/intent.yaml
@@ -31,6 +31,12 @@ project:
   package_name: ~                   # Defaults to repository name if not set
   base_branch: master               # Main/default branch for the project
 
+# === PYTHON PACKAGE CONFIGURATION ===
+python:
+  auth_method: token                 # oidc | token - Authentication method for PyPI uploads
+  # OIDC (Trusted Publisher) - More secure, no secrets needed (recommended)
+  # Token - Traditional API token authentication (requires PYPI_API_TOKEN secret)
+
 # === GIT CONFIGURATION ===
 git:
   commit:
@@ -42,11 +48,11 @@ docker:
   registries:
     dockerhub: docker.io           # DockerHub registry URL
     ghcr: ghcr.io                  # GitHub Container Registry URL
-  
+
   health_check:
     port: 8000                     # Port for container health checks
     path: "/health"                # Health check endpoint path
-  
+
   # Flexible Docker run options - supports multiple env vars, volumes, networks, etc.
   run_options: "-e SERVICE_TYPE=mcp -e SLACK_BOT_TOKEN=test_token -e MCP_INTEGRATED=true -e MCP_LOG_LEVEL=DEBUG"  # Custom Docker run options for testing
 
@@ -61,7 +67,7 @@ docs:
     ci_cd: "docs/CI_CD.md"         # CI/CD documentation path
     installation: "docs/INSTALLATION.md"  # Installation guide path
     readme: "README.md"            # Main README file path
-  
+
   preview:
     branch: "docs-preview"         # Branch for documentation previews
 
@@ -85,7 +91,13 @@ docs:
 #      # Flexible Docker run options - supports any Docker run parameters
 #      run_options: "-e CUSTOM_TOKEN=custom_test_value -e NODE_ENV=production"
 #
-# 4. Advanced Docker configuration examples:
+# 4. Python package authentication configuration:
+#    python:
+#      auth_method: oidc       # Use OIDC (Trusted Publisher) - more secure
+#      # OR
+#      auth_method: token      # Use API token - requires PYPI_API_TOKEN secret
+#
+# 5. Advanced Docker configuration examples:
 #    docker:
 #      run_options: "-e API_KEY=test123 -e DB_HOST=localhost -v /tmp:/app/tmp --network mynet"
 #      # Multiple environment variables, volume mounts, custom networks, etc.
