🍀 Improve the common reusable workflows to be more readable and clear.

--- a/.github/workflows/rw_build_and_test.yaml
+++ b/.github/workflows/rw_build_and_test.yaml
@@ -9,78 +9,61 @@ on:
         required: false
         default: false
     secrets:
-      e2e_test_slack_bot_token:
+      e2e_test_api_token:
         description: "Set the Slack bot token for end-to-end test."
         required: false
 
 jobs:
-  prep_unit-test:
-#    name: Prepare all unit test items
-    uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_get_tests.yaml@v7.3
-    with:
-      shell_arg: test/unit_test/
-
-  prep_integration-test:
-#    name: Prepare all integration test items
-    uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_get_tests.yaml@v7.3
-    with:
-      shell_arg: test/integration_test/
-
-  prep_e2e-test:
-#    name: Prepare all end-to-end test items
-    if: ${{ inputs.run_e2e == true }}
-    uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_get_tests.yaml@v7.3
-    with:
-      shell_arg: test/e2e_test/
-
-  prep_contract-test:
-#    name: Prepare all integration test items
-    uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_get_tests.yaml@v7.3
-    with:
-      shell_arg: test/contract_test/
-
   run_unit-test:
 #    name: Run all unit test items
-    needs: prep_unit-test
     uses: ./.github/workflows/rw_uv_run_test_with_multi_py_versions.yaml
     with:
       test_type: unit-test
-      all_test_items_paths: ${{needs.prep_unit-test.outputs.all_test_items}}
+      test_folder: './test/unit_test'
       install_dependency_with_group: 'dev'
 
   run_integration-test:
 #    name: Run all integration test items
-    needs: prep_integration-test
     uses: ./.github/workflows/rw_uv_run_test_with_multi_py_versions.yaml
     with:
       test_type: integration-test
-      all_test_items_paths: ${{needs.prep_integration-test.outputs.all_test_items}}
+      test_folder: './test/integration_test'
       install_dependency_with_group: 'dev'
 
   run_e2e-test:
 #    name: Run all end-to-end test items
-    needs: prep_e2e-test
+    if: ${{ inputs.run_e2e == true }}
     uses: ./.github/workflows/rw_uv_run_test_with_multi_py_versions.yaml
     with:
       test_type: e2e-test
-      all_test_items_paths: ${{needs.prep_e2e-test.outputs.all_test_items}}
+      test_folder: './test/e2e_test'
       install_dependency_with_group: 'dev'
       max-parallel: 1
     secrets:
-      e2e_test_slack_bot_token: ${{ secrets.e2e_test_slack_bot_token }}
+      e2e_test_api_token: ${{ secrets.e2e_test_api_token }}
 
   run_contract-test:
 #    name: Run all contract test items
-    needs: prep_contract-test
     uses: ./.github/workflows/rw_uv_run_test_with_multi_py_versions.yaml
     with:
       test_type: contract-test
-      all_test_items_paths: ${{needs.prep_contract-test.outputs.all_test_items}}
+      test_folder: './test/contract_test'
+      install_dependency_with_group: 'dev'
+
+  run_script-test:
+#    name: Run all contract test items
+    uses: ./.github/workflows/rw_uv_run_test_with_multi_py_versions.yaml
+    with:
+      test_type: ci-script-test
+      test_folder: './test/ci_script_test'
       install_dependency_with_group: 'dev'
 
   unit-test_codecov:
 #    name: For unit test, organize and generate the testing report and upload it to Codecov
-    if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule'|| (github.event_name == 'push' && github.ref_name == 'master') }}
+    if: ${{
+        contains(fromJSON('["pull_request","workflow_dispatch","schedule"]'), github.event_name) ||
+        (github.event_name == 'push' && github.ref_name == 'master')
+      }}
     needs: run_unit-test
     uses: ./.github/workflows/rw_organize_test_cov_reports.yaml
     with:
@@ -88,7 +71,10 @@ jobs:
 
   integration-test_codecov:
 #    name: For unit test, organize and generate the testing report and upload it to Codecov
-    if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule'|| (github.event_name == 'push' && github.ref_name == 'master') }}
+    if: ${{
+        contains(fromJSON('["pull_request","workflow_dispatch","schedule"]'), github.event_name) ||
+        (github.event_name == 'push' && github.ref_name == 'master')
+      }}
     needs: run_integration-test
     uses: ./.github/workflows/rw_organize_test_cov_reports.yaml
     with:
@@ -96,7 +82,10 @@ jobs:
 
   e2e-test_codecov:
 #    name: For end-to-end test, organize and generate the testing report and upload it to Codecov
-    if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule'|| (github.event_name == 'push' && github.ref_name == 'master') }}
+    if: ${{
+        contains(fromJSON('["pull_request","workflow_dispatch","schedule"]'), github.event_name) ||
+        (github.event_name == 'push' && github.ref_name == 'master')
+      }}
     needs: run_e2e-test
     uses: ./.github/workflows/rw_organize_test_cov_reports.yaml
     with:
@@ -104,7 +93,10 @@ jobs:
 
   contract-test_codecov:
 #    name: For end-to-end test, organize and generate the testing report and upload it to Codecov
-    if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule'|| (github.event_name == 'push' && github.ref_name == 'master') }}
+    if: ${{
+        contains(fromJSON('["pull_request","workflow_dispatch","schedule"]'), github.event_name) ||
+        (github.event_name == 'push' && github.ref_name == 'master')
+      }}
     needs: run_contract-test
     uses: ./.github/workflows/rw_organize_test_cov_reports.yaml
     with:
@@ -112,7 +104,14 @@ jobs:
 
   all_test_not_e2e_test_codecov:
 #    name: Organize and generate the testing report and upload it to Codecov
-    if: ${{ (github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule'|| (github.event_name == 'push' && github.ref_name == 'master')) && inputs.run_e2e == false }}
+    if: ${{
+        (
+            contains(fromJSON('["pull_request","workflow_dispatch","schedule"]'), github.event_name) ||
+            (github.event_name == 'push' && github.ref_name == 'master')
+        ) &&
+        inputs.run_e2e == false
+      }}
+#    needs: [run_unit-test, run_integration-test, run_contract-test]
     needs: [run_unit-test, run_integration-test, run_contract-test]
     uses: ./.github/workflows/rw_organize_test_cov_reports.yaml
     with:
@@ -120,7 +119,14 @@ jobs:
 
   all_test_include_e2e_test_codecov:
 #    name: Organize and generate the testing report and upload it to Codecov
-    if: ${{ (github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule'|| (github.event_name == 'push' && github.ref_name == 'master')) && inputs.run_e2e == true }}
+    if: ${{
+        (
+            contains(fromJSON('["pull_request","workflow_dispatch","schedule"]'), github.event_name) ||
+            (github.event_name == 'push' && github.ref_name == 'master')
+        ) &&
+        inputs.run_e2e == true
+      }}
+#    needs: [run_unit-test, run_integration-test, run_contract-test, run_e2e-test]
     needs: [run_unit-test, run_integration-test, run_contract-test, run_e2e-test]
     uses: ./.github/workflows/rw_organize_test_cov_reports.yaml
     with:
