--- a/.github/workflows/rw_uv_run_test_with_multi_py_versions.yaml
+++ b/.github/workflows/rw_uv_run_test_with_multi_py_versions.yaml
@@ -32,10 +32,16 @@ on:
         required: false
         type: string
         default: './'
+      test_folder:
+        description: "The folder path for test code."
+        required: false
+        type: string
+        default: './test'
       all_test_items_paths:
         description: "The target paths of test items under test."
-        required: true
+        required: false
         type: string
+        default: '["./test"]'
       install_dependency_with_group:
         description: "Install the dependency by UV configuration with dependency group setting. This parameter receive the dependency group naming. (multiple values allowed)"
         type: string
@@ -52,8 +58,8 @@ on:
         required: false
         default: 0
     secrets:
-      e2e_test_slack_bot_token:
-        description: "Set the Slack bot token for end-to-end test."
+      e2e_test_api_token:
+        description: "Set the API token for end-to-end test if it needs."
         required: false
 
 jobs:
@@ -61,7 +67,7 @@ jobs:
     strategy:
       max-parallel: ${{ inputs.max-parallel }}
       matrix:
-        python-version: ['3.12','3.13']
+        python-version: ['3.13']
         os: [ubuntu-latest,ubuntu-22.04,macos-latest,macos-14]
         test-path: ${{fromJson(inputs.all_test_items_paths)}}
       fail-fast: false    # Fix issue in GitHub Action: FailFast: cancelling since parallel instance has failed
@@ -94,14 +100,21 @@ jobs:
         run: |
           curl -s https://slack.com/api/auth.test -H "Authorization: Bearer $SLACK_BOT_TOKEN"
 
-      - name: Run tests with pytest
+      - name: Run the specific tests with pytest
+        if: ${{ inputs.test_type == '' }}
         working-directory: ${{ inputs.test_working_directory }}
         run: uv run pytest ${{ matrix.test-path }}
         continue-on-error: ${{ inputs.keep_run_if_test_fail }}
         env:
-          SLACK_BOT_TOKEN: ${{ secrets.e2e_test_slack_bot_token }}
-          SLACK_TEST_CHANNEL: ${{ vars.SLACK_TEST_CHANNEL }}
-          SLACK_TEST_CHANNEL_ID: ${{ vars.SLACK_TEST_CHANNEL_ID }}
+          E2E_TEST_API_TOKEN: ${{ secrets.e2e_test_api_token }}
+
+      - name: Run ${{ inputs.test_type }} tests with pytest
+        if: ${{ inputs.test_type != '' }}
+        working-directory: ${{ inputs.test_working_directory }}
+        run: uv run pytest ${{ inputs.test_folder }}
+        continue-on-error: ${{ inputs.keep_run_if_test_fail }}
+        env:
+          E2E_TEST_API_TOKEN: ${{ secrets.e2e_test_api_token }}
 
       - name: Rename the code coverage result file
         working-directory: ${{ inputs.test_working_directory }}
