--- a/.github/workflows/rw_run_all_test_and_record.yaml
+++ b/.github/workflows/rw_run_all_test_and_record.yaml
@@ -9,7 +9,7 @@ on:
         required: false
         default: false
     secrets:
-      e2e_test_slack_bot_token:
+      e2e_test_api_token:
         description: "Set the Slack bot token for end-to-end test."
         required: false
       codecov_token:
@@ -26,7 +26,7 @@ jobs:
     with:
       run_e2e: ${{ inputs.run_e2e }}
     secrets:
-      e2e_test_slack_bot_token: ${{ secrets.e2e_test_slack_bot_token }}
+      e2e_test_api_token: ${{ secrets.e2e_test_api_token }}
 
   unit-test_codecov_finish:
 #    name: Organize and generate the testing report and upload it to Codecov
@@ -71,7 +71,7 @@ jobs:
     if: ${{
         !contains(github.event.pull_request.labels.*.name, 'dependencies') &&
         (
-            (contains(fromJSON('["pull_request","workflow_dispatch","schedule"]'), github.event_name) || 
+            (contains(fromJSON('["pull_request","workflow_dispatch","schedule"]'), github.event_name) ||
             (github.event_name == 'push' && github.ref_name == 'master')
         )) &&
         inputs.run_e2e == true
