➕ Add one more trigger condition for the specific naming rule git branch.

--- a/.github/workflows/ci_includes_e2e_test.yaml
+++ b/.github/workflows/ci_includes_e2e_test.yaml
@@ -5,6 +5,27 @@ on:
   schedule:
     - cron: '33 19 * * 2'
   workflow_dispatch:        # Manually trigger（optional）
+  push:
+    branches:
+      - "**e2e"
+      - "e2e**"
+    paths:
+#     For GitHub Action
+      - ".github/workflows/ci_includes_e2e_test.yaml"
+      - ".github/workflows/rw_build_and_test.yaml"
+      - ".github/workflows/rw_uv_run_test.yaml"
+      - ".github/workflows/rw_run_all_test_and_record.yaml"
+      - ".github/workflows/rw_uv_run_test_with_multi_py_versions.yaml"
+#     For test code
+      - "test/e2e_test/**/*.py"
+#     For configurations for test or CI
+      - ".coveragerc"
+      - "codecov.yml"
+      - "pytest.ini"
+      - "sonar-project.properties"
+#     For Python project configuration
+      - "pyproject.toml"
+      - "uv.lock"
 
 jobs:
   build-and-test_all:
@@ -14,6 +35,6 @@ jobs:
     with:
       run_e2e: true
     secrets:
-      e2e_test_slack_bot_token: ${{ secrets.SLACK_BOT_TOKEN }}
+      e2e_test_api_token: ${{ secrets.SLACK_BOT_TOKEN }}
       codecov_token: ${{ secrets.CODECOV_TOKEN }}
       sonar_token: ${{ secrets.SONAR_TOKEN }}
