🧑‍💻 Comment out the test for CI script only first.

--- a/.github/workflows/rw_build_and_test.yaml
+++ b/.github/workflows/rw_build_and_test.yaml
@@ -50,13 +50,13 @@ jobs:
       test_folder: './test/contract_test'
       install_dependency_with_group: 'dev'
 
-  run_script-test:
-#    name: Run all contract test items
-    uses: ./.github/workflows/rw_uv_run_test_with_multi_py_versions.yaml
-    with:
-      test_type: ci-script-test
-      test_folder: './test/ci_script_test'
-      install_dependency_with_group: 'dev'
+#  run_script-test:
+##    name: Run all contract test items
+#    uses: ./.github/workflows/rw_uv_run_test_with_multi_py_versions.yaml
+#    with:
+#      test_type: ci-script-test
+#      test_folder: './test/ci_script_test'
+#      install_dependency_with_group: 'dev'
 
   unit-test_codecov:
 #    name: For unit test, organize and generate the testing report and upload it to Codecov
