--- a/.github/workflows/rw_uv_run_test_with_multi_py_versions.yaml
+++ b/.github/workflows/rw_uv_run_test_with_multi_py_versions.yaml
@@ -8,6 +8,8 @@
 #     * test_type: The testing type. In generally, it only has 2 options: 'unit-test' and 'integration-test'.
 #     * all_test_items_paths: The target paths of test items under test.
 #     * install_dependency_with_group: Install the dependency by UV configuration with dependency group setting. This parameter receive the dependency group naming.
+#     * python-versions: JSON array of Python versions to test against. Default: '["3.13"]'
+#     * operating-systems: JSON array of operating systems to test on. Default: '["ubuntu-latest", "ubuntu-22.04", "macos-latest", "macos-14"]'
 #
 # Workflow running output:
 #     No, but it would save the testing coverage reports to provide after-process to organize and record.
@@ -57,6 +59,16 @@ on:
         type: number
         required: false
         default: 0
+      python-versions:
+        description: "JSON array of Python versions to test against."
+        type: string
+        required: false
+        default: '["3.13"]'
+      operating-systems:
+        description: "JSON array of operating systems to test on."
+        type: string
+        required: false
+        default: '["ubuntu-latest", "ubuntu-22.04", "macos-latest", "macos-14"]'
     secrets:
       e2e_test_api_token:
         description: "Set the API token for end-to-end test if it needs."
@@ -67,8 +79,8 @@ jobs:
     strategy:
       max-parallel: ${{ inputs.max-parallel }}
       matrix:
-        python-version: ['3.13']
-        os: [ubuntu-latest,ubuntu-22.04,macos-latest,macos-14]
+        python-version: ${{fromJson(inputs.python-versions)}}
+        os: ${{fromJson(inputs.operating-systems)}}
         test-path: ${{fromJson(inputs.all_test_items_paths)}}
       fail-fast: false    # Fix issue in GitHub Action: FailFast: cancelling since parallel instance has failed
 
