--- a/.github/workflows/rw_build_and_test.yaml
+++ b/.github/workflows/rw_build_and_test.yaml
@@ -80,7 +80,7 @@ jobs:
         (github.event_name == 'push' && github.ref_name == 'master')
       }}
     needs: run_unit-test
-    uses: ./.github/workflows/rw_organize_test_cov_reports.yaml
+    uses: Chisanan232/Template-Python-UV-Project/.github/workflows/rw_organize_test_cov_reports.yaml@master
     with:
       test_type: unit-test
 
@@ -91,7 +91,7 @@ jobs:
         (github.event_name == 'push' && github.ref_name == 'master')
       }}
     needs: run_integration-test
-    uses: ./.github/workflows/rw_organize_test_cov_reports.yaml
+    uses: Chisanan232/Template-Python-UV-Project/.github/workflows/rw_organize_test_cov_reports.yaml@master
     with:
       test_type: integration-test
 
@@ -102,7 +102,7 @@ jobs:
         (github.event_name == 'push' && github.ref_name == 'master')
       }}
     needs: run_e2e-test
-    uses: ./.github/workflows/rw_organize_test_cov_reports.yaml
+    uses: Chisanan232/Template-Python-UV-Project/.github/workflows/rw_organize_test_cov_reports.yaml@master
     with:
       test_type: e2e-test
 
@@ -113,7 +113,7 @@ jobs:
         (github.event_name == 'push' && github.ref_name == 'master')
       }}
     needs: run_contract-test
-    uses: ./.github/workflows/rw_organize_test_cov_reports.yaml
+    uses: Chisanan232/Template-Python-UV-Project/.github/workflows/rw_organize_test_cov_reports.yaml@master
     with:
       test_type: contract-test
 
@@ -128,7 +128,7 @@ jobs:
       }}
 #    needs: [run_unit-test, run_integration-test, run_contract-test]
     needs: [run_unit-test, run_integration-test, run_contract-test]
-    uses: ./.github/workflows/rw_organize_test_cov_reports.yaml
+    uses: Chisanan232/Template-Python-UV-Project/.github/workflows/rw_organize_test_cov_reports.yaml@master
     with:
       test_type: all-test
 
@@ -143,6 +143,6 @@ jobs:
       }}
 #    needs: [run_unit-test, run_integration-test, run_contract-test, run_e2e-test]
     needs: [run_unit-test, run_integration-test, run_contract-test, run_e2e-test]
-    uses: ./.github/workflows/rw_organize_test_cov_reports.yaml
+    uses: Chisanan232/Template-Python-UV-Project/.github/workflows/rw_organize_test_cov_reports.yaml@master
     with:
       test_type: all-test
